--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
+    <div id="container">
+        <div class="header">
+            <h1 class="tittle">Twenty One Pilots</h1>
+            <p class="subtittle">Twenty One Pilots é uma dupla musical americana de Columbus, Ohio. A formação consiste em Joseph e o baterista Josh Dun.   
+            </p>
+        </div>
+    </div>
     
 </body>
 </html>
