--- a/index.html
+++ b/index.html
@@ -40,11 +40,38 @@
             <h2>Curiosidades da banda:</h2>
             <ul>
                 <li>a pintura que Joseph vai estar usando em cada videoclipe e performance no ciclo deste álbum tem tudo a ver com o nome do novo álbum da banda, Blurryface</li>
-                
+
                 <li> o Twenty One Pilots retornou aos palcos do país com uma missão um tanto complicada: substituir um dos integrantes do panteão do punk rock, o Blink-182 .</li>
 
-                <li></li>
+                <li><span class="bold">A banda, que mistura hip-hop</span>, pop e rock , apresentou um novo lado nesta sexta-feira (21/5) com o álbum Scaled and Icy.</li>
             </ul>
+        </div>
+
+        <div class="container-quote">
+            <blockquote>
+                I just wanna stay in the sun where I find<br/>
+                I know it's hard sometimes<br/>
+                Pieces of peace in the sun's peace of mind<br/>
+                I know it's hard sometimes<br/>
+                Yeah, I think about the end just way too much<br/>
+                But it's fun to fantasize<br/>
+                On my enemies who wouldn't wish who I was<br/>
+                But it's fun to fantasize
+            </blockquote>
+            <p>Música - Ride</p>
+        </div>
+
+
+        <div class="img-bold">
+            <figure>
+                <img src="./img/banner2.jpg" alt="Show twenty one pilots">
+                <figcaption>Estreia do Album Novo</figcaption>
+            </figure>
+        </div>
+
+        <div class="more-information">
+            <h2>Mais Informações:</h2>
+            <p>Você pode saber mais <a href="https://en.wikipedia.org/wiki/Twenty_One_Pilots" target="_blank">clicando aqui</a></p>
         </div>
 
 
