--- a/index.html
+++ b/index.html
@@ -23,17 +23,20 @@
 
         <div class="container-biography">
             <h2>Biografia da banda</h2><br/>
-            <p>Twenty One Pilots é um duo americano originário de Columbus, Ohio.<span class="bold"> A banda foi formada em 2009 pelo vocalista Tyler Joseph junto com Nick Thomas e Chris Salih</span>, ambos saíram da banda em 2011. Após a partida dos dois integrantes, a banda é composta desde então por Tyler e Josh Dun. Eles lançaram dois álbuns independentes, Twenty One Pilots, em 2009 e Regional at Best, em 2011, antes de assinarem com a gravadora Fueled by Ramen, em 2012. Seu primeiro álbum com esta gravadora, Vessel, foi lançado em 2013 e se tornou o segundo álbum da banda e na história em que cada faixa recebeu pelo menos uma certificação de ouro, fazendo do Twenty One Pilots a primeira banda na história da música a ter cada canção em dois álbuns a ganhar prêmios de ouro ou platina.</p><br/>
+            <p>Twenty One Pilots é um duo americano originário de Columbus, Ohio.<span class="bold"> A banda foi formada em 2009 pelo vocalista Tyler Joseph junto com Nick Thomas e Chris Salih</span>, ambos saíram da banda em 2011. Após a partida dos dois integrantes, a banda é composta desde então por Tyler e Josh Dun. Eles lançaram dois álbuns independentes, Twenty One Pilots, em 2009 e Regional at Best, em 2011, antes de assinarem com a gravadora Fueled by Ramen, em 2012. Seu primeiro álbum com esta gravadora, Vessel, foi lançado em 2013 e se tornou o segundo álbum da banda e na história em que cada faixa recebeu pelo menos uma certificação de ouro, fazendo do Twenty One Pilots a primeira banda na história da música a ter cada canção em dois álbuns a ganhar prêmios de ouro ou platina.</p>
 
-            <p>O duo alcançou um grande sucesso com seu quarto álbum de estúdio, Blurryface, que produziu os singles de sucesso <span class="bold">"Stressed Out" e "Ride"</span> e se tornou o primeiro álbum em que cada faixa recebeu pelo menos uma certificação de ouro da Recording Industry Association of America. O lançamento do single "Heathens" também fez do grupo o primeiro artista alternativo da história a ter dois singles simultâneos na Billboard Hot 100 e o terceiro ato de rock na história a ter dois singles simultaneamente no top 5 da Billboard, juntando-se aos Beatles e Elvis Presley.</p><br/>
+            <p>O duo alcançou um grande sucesso com seu quarto álbum de estúdio, Blurryface, que produziu os singles de sucesso <span class="bold">"Stressed Out" e "Ride"</span> e se tornou o primeiro álbum em que cada faixa recebeu pelo menos uma certificação de ouro da Recording Industry Association of America. O lançamento do single "Heathens" também fez do grupo o primeiro artista alternativo da história a ter dois singles simultâneos na Billboard Hot 100 e o terceiro ato de rock na história a ter dois singles simultaneamente no top 5 da Billboard, juntando-se aos Beatles e Elvis Presley.</p>
             
             <p>Atualmente, o duo já lançou seis álbuns de estúdio no total, sendo o mais recente, Scaled and Icy, lançado em 21 de maio de 2021. Eles também já atingiram dez canções número 1 na parada Alternative Songs, tornando-se os quarto maior artista com esse feito.</p>
-        </div><br/>
+        </div>
 
         <div class="container-quote">
-            <blockquote>Embora eu esteja fraco e abatido
-                eu vou escapulir para este som.</blockquote>
-                <p>Joseph</p>
+            <p class="font-italic">Joseph</p>
+            <blockquote>
+                Embora eu esteja fraco e abatido
+                eu vou escapulir para este som.
+            </blockquote>
+                
         </div><br/>
 
         <div class="container-curiosites">
@@ -58,7 +61,7 @@
                 On my enemies who wouldn't wish who I was<br/>
                 But it's fun to fantasize
             </blockquote>
-            <p>Música - Ride</p>
+            <p class="font-italic">Música - Ride</p>
         </div>
 
 
